    be used. For example, "autosave=10 11 20" will set
    a 10-second time interval for auto-saving, and the
    save slots used will be between 11 and 20. If no
    save slot is specified, then the current save slot
    will be used for auto-saving. A menu option "Enable-
    auto-saving state" is added to "Save/load options"
    menu group under "Capture" to toggle the auto-saving
    when the function is enabled. (Wengier)
  - The Configuration Tool windows are now scalable, so
    that they will no longer look very small in e.g.
    full-screen or High DPI modes. (ant_222)
  - You can now change the current output dynamically
    with CONFIG command, e.g. "CONFIG -set output=ttf"
    and "CONFIG -set output=default". (Wengier)
  - The setting "output=default" will enable the OpenGL
    output for the Linux platform if possible. (Wengier)
0.83.10
  - The Windows key(s) in Windows and the Command key(s)
    in macOS will now be displayed as the "Windows" and
    "Command" keys instead of the "super" and the "meta"
    keys in SDL1 builds just like SDL2 builds. (Wengier)
  - Cursor blinking rate for TrueType font (TTF) output
    can now be customized with the ttf.blinkc option.
    Set an integer between 1 (fastest) and 7 (slowest)
    to change TTF cursor blinking rate, or setting it to
    0 for no cursor (or false for non-blinking cursor as
    in previous versions), with the default value being
    6 on PC-98 systems and 4 elsewhere. (Wengier)
  - Fixed parallel port emulation to allow MDA port 3BCh
    to work properly.
  - Enhanced the printer function on Windows platforms
    to allow printer names to be specified in [printer]
    section via the "device" option for direct printing
    to the selected device. If left empty, then Windows
    Print dialog will always be shown, or specifying "-"
    will cause it to show only once (unless the user
    clicks "Cancel"). Under "Help" menu there is now a
    menu option "List Printer Devices" to list printer